# server

./: .gitignore  .golangci.yml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.es.md  README.md  go.mod  go.sum  nexgou.go
.githooks/: commit-msg
.github/: PULL_REQUEST_TEMPLATE.md  release-please-config.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  commitlint.yml  release.yml  stale.yml
benchmark/: README.md
benchmark/_shared/: .env.example  docker-compose.observability.yml  docker-compose.yml
benchmark/actix-web/: Cargo.toml  Dockerfile  README.md
benchmark/ajax-php/: Dockerfile  README.md
benchmark/asp-kestrel/: Dockerfile  Program.cs  README.md  asp-kestrel.csproj
benchmark/fastify/: Dockerfile  README.md  package.json
benchmark/hyper/: Cargo.toml  Dockerfile  README.md
benchmark/hyper/src/: main.rs
benchmark/nexgou/: Dockerfile  README.md
benchmark/vert-x/: Dockerfile  README.md  pom.xml
docs/: API.md  BENCHMARK.md  COMPETETION_REFERENCE.md  INTEGRATION.md  MIGRATION.md  README.md  RELEASE_2.0.0.md
docs/en/: config.md  controllers.md  ecosystem-modules.md  getting-started.md  grpc.md  logger.md  middleware.md  modules.md  security.md  sse.md  testing.md  websocket.md
docs/es/: config.md  controllers.md  ecosystem-modules.md  getting-started.md  grpc.md  logger.md  middleware.md  modules.md  security.md  sse.md  testing.md  websocket.md
samples/api/: README.md  app.module.go  main.go
samples/chat/: README.md  app.module.go
scripts/: install-hooks.ps1  install-hooks.sh
(+116 files in other folders)
