[package]
name = "nexgou-benchmark-hyper"
version = "2.0.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.41", default-features = false, features = ["clock"] }
hyper = { version = "0.14.32", features = ["full"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
url = "2.5.4"
